src/objects/HPPStatusDuration__c.object
<CustomObject>
    <description>Used to store temporary data used as part of the CalculateHPPStatusDurations process. This data is cleared out on a daily basis and re-created to represent this most up-to-date figures.</description>
    <fields>
        <fullName>FromStatus__c</fullName>
        <label>From Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityCount__c</fullName>
        <label>Opportunity Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunDate__c</fullName>
        <label>Run Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ToStatus__c</fullName>
        <label>To Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalStatusDuration__c</fullName>
        <label>Total Status Duration (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>HPP Status Duration</label>
    <nameField>
        <label>Unique Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HPP Status Durations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>